添加文件扫描框架

--- a/mybatis/src/main/resources/mybatis/db.properties
+++ b/mybatis/src/main/resources/mybatis/db.properties
@@ -1,5 +1,5 @@
 jdbc_driver=com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://120.77.82.142:3306/business?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+jdbc_url=jdbc:mysql://120.77.82.142:3306/enjoy?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
 jdbc_username=root
 jdbc_password=3167309qq
 #project_src =src/main/java
