--- a/jsontoavro/pom.xml
+++ b/jsontoavro/pom.xml
@@ -16,6 +16,12 @@
             <enabled>false</enabled>
         </snapshots>
     </repository>
+        <repository>
+            <id>wso2</id>
+            <url>http://dist.wso2.org/maven2/</url>
+        </repository>
+
+
     </repositories>
 
     <dependencies>
@@ -143,13 +149,20 @@
         <!-- https://mvnrepository.com/artifact/junit/junit -->
 
     </dependencies>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+     </properties>
     <build>
         <plugins>
+
             <plugin>
+
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
+
                 <configuration>
+                    <encoding>utf8</encoding>
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
